Fixed loginpage button spacing

--- a/src/components/Modal/Modal.scss
+++ b/src/components/Modal/Modal.scss
@@ -22,7 +22,7 @@
   &__content {
     position: relative;
     background: #fff;
-    padding: 20px;
+    // padding: 20px;
     border-radius: 8px;
     z-index: 1001;
     max-width: 500px;
