--- a/src/pages/LoginPage/LoginPage.scss
+++ b/src/pages/LoginPage/LoginPage.scss
@@ -6,7 +6,7 @@
   align-items: center;
   height: auto;
   background-color: #ffffff;
-  margin: 0rem 0 5rem 0;
+  margin: 0rem 0 0 0;border-radius: 8px;
 
   &__content {
     position: relative;
@@ -105,6 +105,12 @@
         text-decoration: underline;
       }
     }
+  }
+
+  &__social-buttons {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
   }
 }
 
